--- a/grafana/provisioning/datasources/datasources.yaml
+++ b/grafana/provisioning/datasources/datasources.yaml
@@ -1,9 +1,28 @@
 apiVersion: 1
 
+deleteDatasources:
+  - name: must-gather-prometheus
+    orgId: 1
+  - name: influxdb
+    orgId: 1
+
 datasources:
-- name: default
+- name: must-gather-prometheus
+  orgId: 1
   type: prometheus
   access: proxy
   url: http://prometheus:9090
   isDefault: true
+  editable: true
+- name: must-gather-influxdb
+  orgId: 1
+  uid: must_gather_influxdb
+  type: influxdb
+  access: proxy
+  url: http://influxdb:8086
+  database: prometheus
+  basicAuth: true
+  basicAuthUser: admin
+  basicAuthPassword: admin
+  isDefault: false
   editable: true
