--- a/grafana/provisioning/datasources/datasources.yaml
+++ b/grafana/provisioning/datasources/datasources.yaml
@@ -1,5 +1,8 @@
 apiVersion: 1
 
+# Desired state is prometheus datasource named as 'default'
+# Bug tracked by issue https://github.com/grafana/grafana/issues/32460
+
 deleteDatasources:
   - name: must-gather-prometheus
     orgId: 1
