feat/podman-compose: deprecating Makefile to manage contianer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     command:
       - '--web.enable-lifecycle'
       - '--config.file=/etc/prometheus/prometheus.yml'
-  
+
   grafana:
     container_name: grafana
     image: grafana/grafana:7.5.1
@@ -33,6 +33,20 @@ services:
       - ${WORKDIR}/grafana:/var/lib/grafana:z
       - ./grafana/provisioning:/etc/grafana/provisioning:z
       - ./grafana/dashboards:/etc/grafana/dashboards:z
+
+  loki:
+    container_name: loki
+    image: grafana/loki:latest
+    restart: always
+    env_file: 
+      - "${PWD}/.env"
+    ports:
+      - 3100:3100
+    volumes:
+      - ./loki:/config:z
+      - ${WORKDIR}/loki:/var/lib/loki:z
+    command:
+      - '--config.file=/config/loki-config.yaml'
 
   influxdb:
     container_name: influxdb
@@ -55,19 +69,7 @@ services:
     ports:
       - 8888:8888
 
-  loki:
-    container_name: loki
-    image: grafana/loki:2.2.0
-    restart: always
-    env_file: 
-      - "${PWD}/.env"
-    ports:
-      - 3100:3100
-    volumes:
-      - ./loki:/config:z
-      - ${WORKDIR}/loki:/var/lib/loki:z
-    command:
-      - '--config.file=/config/loki-config.yaml'
+
 
   lokitail:
     container_name: lokitail
