--- a/.env-default
+++ b/.env-default
@@ -8,11 +8,12 @@ GF_URL="http://localhost:3000"
 #GF_SECURITY_ADMIN_PASSWORD=admin
 #GF_SECURITY_DISABLE_INITIAL_ADMIN_CREATION=true
 GF_AUTH_ANONYMOUS_ENABLED=true
-GF_ALERTING_ENABLED=false
+GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+#GF_ALERTING_ENABLED=false
 
 # InfluxDB
 INFLUXDB_URL="http://influxdb:8086"
 INFLUXDB_ADMIN_ENABLED=true
 INFLUXDB_DB=prometheus
 INFLUXDB_ADMIN_USER=admin
-INFLUXDB_ADMIN_PASSWORD="superp@$"
+INFLUXDB_ADMIN_PASSWORD="admin"
