--- a/manifests.yaml
+++ b/manifests.yaml
@@ -47,16 +47,16 @@ spec:
     spec:
       containers:
       - name: influxdb
-        image: influxdb:1.8.0-alpine
+        image: quay.io/mtulio/influxdb:1.8.0-alpine
         ports:
         - containerPort: 8086
         volumeMounts:
           - mountPath: "/var/lib/influxdb"
             name: influx-db
-        resources:
-          limits:
-            memory: 1Gi
-            cpu: 500m
+        #resources:
+        #  limits:
+        #    memory: 1Gi
+        #    cpu: 500m
       volumes:
         - name: influx-db
           emptyDir: {}
@@ -79,12 +79,13 @@ spec:
     spec:
       containers:
       - name: prometheus
-        image: prom/prometheus:v2.24.1
+        image:  quay.io/mtulio/prometheus:v2.24.1
         args:
           - --config.file=/etc/prometheus/prometheus.yml
           - --storage.tsdb.path=/prometheus
         ports:
         - containerPort: 9090
+          name: web
         volumeMounts:
           - name: prometheus-db
             mountPath: /prometheus
@@ -95,16 +96,16 @@ spec:
         #     memory: 1Gi
         #     cpu: 500m
 
-      initContainers:
-      - name: wait-influxdb
-        image: busybox:1.28
-        command: ['sh', '-c', "until nslookup influxdb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for influxdb; sleep 2; done"]
-      - name: ls-config
-        image: busybox:1.28
-        command: ['ls', '-la', "/etc/prometheus"]
-        volumeMounts:
-          - name: prometheus-config
-            mountPath: /etc/prometheus
+      #initContainers:
+      #- name: wait-influxdb
+      #  image:  docker.io/library/busybox:1.28
+      #  command: ['sh', '-c', "until nslookup influxdb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for influxdb; sleep 2; done"]
+      #- name: ls-config
+      #  image: busybox:1.28
+      #  command: ['ls', '-la', "/etc/prometheus"]
+      #  volumeMounts:
+      #    - name: prometheus-config
+      #      mountPath: /etc/prometheus
       volumes:
         - name: prometheus-db
           emptyDir: {}
@@ -132,7 +133,7 @@ spec:
     spec:
       containers:
       - name: grafana
-        image: grafana/grafana:7.0.1
+        image: quay.io/mtulio/grafana:7.0.1
         ports:
         - containerPort: 3000
         # resources:
@@ -145,39 +146,54 @@ kind: Service
 metadata:
   name: prometheus
   labels:
-    run: prometheus
+    app: prometheus
 spec:
   ports:
-  - port: 9090
-    protocol: TCP
+  - name: web
+    port: 9090
+    targetPort: web
   selector:
-    run: prometheus
+    app: prometheus
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: influxdb
   labels:
-    run: influxdb
+    app: influxdb
 spec:
   ports:
   - port: 8086
     protocol: TCP
   selector:
-    run: influxdb
+    app: influxdb
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: grafana
   labels:
-    run: grafana
+    app: grafana
 spec:
   ports:
   - port: 3000
     protocol: TCP
   selector:
-    run: grafana
+    app: grafana
+---
+apiVersion: v1
+kind: Route
+metadata:
+  name: prometheus
+spec:
+  port:
+    targetPort: web
+  # tls:
+  #   insecureEdgeTerminationPolicy: Redirect
+  #   termination: Reencrypt
+  to:
+    kind: Service
+    name: prometheus
 
 # Prometheus POD:
 # Containers: prometheus
